Fixed text overflowing the select when a course with a long name is selected

--- a/client/app/main/main.scss
+++ b/client/app/main/main.scss
@@ -103,6 +103,12 @@ footer {
   text-align:center;
 }
 
+.ui-select-match-text {
+  width: 100%;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
+
 @media screen and (max-width: 600px) {
   .hide-on-mobile {
     visibility: hidden;
